@@ -28,7 +28,7 @@
 /
 <%= link_to "日記", {:action => "noteslist"} %>
 <div class="notice">
-このファイルは donrails のデフォルトレイアウトファイル(app/views/layouts/notes.rhtml)です。使用前に変更してください。
+このファイルは donrails のデフォルトレイアウトファイル(app/views/layouts/defaults/notes.rhtml)です。使用前に変更してください。
 </div>
 </div> <!-- end of head -->
 
