@@ -1,91 +1,0 @@
-<html lang="ja">
-<head>
-
-<%= auto_discovery_link_tag(:rss, :action => 'rdf_category', :category => @rdf_category) if @rdf_category %>
-<%= auto_discovery_link_tag(:rss, :action => 'rdf_article', :id => @rdf_article) if @rdf_article %>
-<%= auto_discovery_link_tag(:atom, :controller => 'atom', :action => 'feed', :id => @rdf_article) if @rdf_article %>
-<%= auto_discovery_link_tag(:rss, :action => 'rdf_recent') %>
-<%= auto_discovery_link_tag(:atom, :controller => 'atom', :action => 'feed') %>
-
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<link rev="made" href="mailto:yasu@debian.or.jp">
-<meta name="author" content="ARAKI Yasuhiro">
-
-<%= stylesheet_link_tag "modern" %>
-<%= stylesheet_link_tag "araki" %>
-
-<%= javascript_include_tag "code-toggle-popup.js" %>
-<%= javascript_include_tag "prototype.js" %>
-<% if @noindex %>
-<meta name="robots" content="noindex">
-<% end %>
-
-<title>ARAKI notes - <%=h strip_links(@heading) if @heading %></title>
-
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-_uacct = "UA-118919-1";
-urchinTracker();
-</script>
-
-</head>
-
-<body>
-<div class="head">
-<%= link_to "トップ", {:action => "index"} %>
-/
-<%= link_to "日記", {:action => "noteslist"} %>
-/ This is ARAKI's daily notes.
-</div> <!-- end of head -->
-
-<div class="mainarticle">
-<%= @content_for_layout %>
-</div>
-
-<div class="sidebar">
-<div class="lefttitle">
-
-<%= render("shared/search") %>
-[最近のdonrails関連]
-<%= render("shared/category_title_list", "category" => "donrails") %>
-[最近のruby関連]
-<%= render("shared/category_title_list", "category" => "ruby") %>
-
-<script type="text/javascript"><!--
-google_ad_client = "pub-9042634293904780";
-google_ad_width = 120;
-google_ad_height = 90;
-google_ad_format = "120x90_0ads_al";
-google_ad_channel ="";
-//--></script>
-<script type="text/javascript"
-  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
-
-<%= render("shared/show_direct") %>
-
-カテゴリ
-<% ["road","ruby","mail","mono"].each do |cat| %>
-/<%= link_to cat, {:action => "show_category", :category => cat} %>
-<% end %>
-
-<%= render("shared/category_select") %>
-
-
-<address>yasu@debian.or.jp</address>
-実ノ商人ハ先モ立チ我モ立ツコトヲ思フナリ
-<p>
-<%= link_to "管理", {:controller => 'login', :action => 'login_index' }, :confirm => "Really login for management?" %>
-</p>
-<p>
-このpageは<a href="http://www.araki.net/wiki/donrails-wiliki.cgi">donrails</a>で生成されています。
-</p>
-</div> <!-- end of left -->
-
-<div class="footer">
-</div> <!-- end of footer -->
-
-</body>
-
-</html>
